Fix breadcrumb separator wrapping

--- a/source/patterns/components/breadcrumb/breadcrumb.scss
+++ b/source/patterns/components/breadcrumb/breadcrumb.scss
@@ -9,10 +9,12 @@
   padding: 0;
   margin: 0;
   display: inline-flex;
+  flex-wrap: wrap;
 }
 
 .cu-breadcrumb__item {
   display: none;
+  white-space: nowrap;
 
   @include breakpoint(sm) {
     display: block;
